# CoreGL_cmake

./: CMakeLists.txt
include/: core.hpp
package/assimp/code/AssetLib/Assxml/: AssxmlFileWriter.cpp
package/assimp/code/AssetLib/Ogre/: OgreBinarySerializer.h
package/assimp/include/assimp/: cimport.h  material.h  quaternion.h
package/assimp/port/assimp_rs/src/structs/quaternion/: mod.rs  quaternion.rs
package/glad/include/glad/: glad.h
package/glad/src/: glad.c
package/glew-2.1.0/: glew.pc
package/glew-2.1.0-master/: GAJ-Geospatial-Notes.txt  glew.pc
package/glew-2.1.0-master/msvc/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  cmake_install.cmake  glew.sln  glew.sln.old  glew_s.vcxproj.filters  glewinfo.vcxproj  glewinfo.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters  visualinfo.vcxproj
package/glew-2.1.0/msvc/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj.filters  cmake_uninstall.cmake  glew.vcxproj  glew_s.vcxproj  visualinfo.vcxproj.filters
package/glfw/docs/: Doxyfile.in  window.md
package/lua-5.4.8/: CMakeLists.txt
package/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
package/nlohmann/detail/: exceptions.hpp  hash.hpp  json_custom_base_class.hpp  json_pointer.hpp  json_ref.hpp  macro_scope.hpp  macro_unscope.hpp  string_concat.hpp  string_escape.hpp  string_utils.hpp  value_t.hpp
package/nlohmann/detail/conversions/: from_json.hpp  to_chars.hpp  to_json.hpp
package/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp  position_t.hpp
package/nlohmann/detail/iterators/: internal_iterator.hpp  iter_impl.hpp  iteration_proxy.hpp  iterator_traits.hpp  json_reverse_iterator.hpp  primitive_iterator.hpp
package/nlohmann/detail/meta/: cpp_future.hpp  detected.hpp  identity_tag.hpp  is_sax.hpp  std_fs.hpp  type_traits.hpp  void_t.hpp
package/nlohmann/detail/meta/call_std/: begin.hpp  end.hpp
package/nlohmann/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
package/openal-soft-1.22.2/: CMakeLists.txt
package/openal-soft-1.22.2/al/: auxeffectslot.cpp  source.cpp  state.cpp
package/openal-soft-1.22.2/common/: almalloc.h
package/zlib/: CMakeLists.txt
src/: config.hpp  core.cpp  modules.hpp
src/audio/: aBuffer.cpp  aBuffer.hpp  aDevice.cpp  aDevice.hpp  aListener.cpp  aListener.hpp  aSource.cpp  aSource.hpp
src/file/: code.cpp  code.hpp  image.cpp  image.hpp  mtl.cpp  mtl.hpp  obj.cpp  obj.hpp  ttf.cpp  ttf.hpp  wav.cpp  wav.hpp
src/file/animation/: a_FBX.cpp  a_FBX.hpp
src/file/models/: m_FBX.cpp  m_FBX.hpp  m_OBJ.cpp  m_OBJ.hpp  m_types.hpp
src/file/script/: lua_Array.cpp  lua_Array.hpp  lua_Function.cpp  lua_Function.hpp  lua_Runner.cpp  lua_Runner.hpp  lua_Stack.cpp  lua_Stack.hpp  lua_Table.cpp  lua_Table.hpp
src/graphics/api/OpenGL/: gl_FrameBuffer.cpp  gl_FrameBuffer.hpp  gl_Sampler.cpp  gl_Sampler.hpp  gl_commands.cpp  gl_commands.hpp  gl_descriptorContainer.hpp  gl_elementBuffers.cpp  gl_elementBuffers.hpp  gl_shaderProgram.cpp  gl_shaderProgram.hpp  gl_texture.cpp  gl_texture.hpp  gl_vertexBuffer.cpp  gl_vertexBuffer.hpp
src/graphics/api/Vulkan/: vk_Attachments.hpp  vk_Buffer.cpp  vk_Buffer.hpp  vk_CommandBuffer.cpp  vk_CommandBuffer.hpp  vk_CommandPool.cpp  vk_CommandPool.hpp  vk_Descriptor.cpp  vk_Descriptor.hpp  vk_ElementBuffer.cpp  vk_ElementBuffer.hpp  vk_FrameBuffer.cpp  vk_FrameBuffer.hpp  vk_Image.cpp  vk_Image.hpp  vk_Instance.cpp  vk_Instance.hpp  vk_Pipeline.cpp  vk_Pipeline.hpp  vk_Queue.cpp  vk_Queue.hpp  vk_Semaphore.cpp  vk_Semaphore.hpp  vk_ShaderStage.cpp  vk_ShaderStage.hpp  vk_SwapChainImageView.cpp  vk_SwapChainImageView.hpp  vk_Sync.cpp  vk_Sync.hpp  vk_VertexBuffer.cpp  vk_VertexBuffer.hpp  vk_commandBuffer.cpp  vk_commandBuffer.hpp  vk_commandPool.cpp  vk_commandPool.hpp  vk_depthImageView.cpp  vk_depthImageView.hpp  vk_device.cpp  vk_device.hpp  vk_fence.cpp  (+25 more)
src/graphics/commons/: Camera.cpp  Camera.hpp  Descriptor.hpp  ebo.cpp  ebo.hpp  fbo.cpp  fbo.hpp  gl.cpp  gl.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp
src/graphics/renderer/: Rect.cpp  Rect.hpp  gResource.cpp  gResource.hpp
src/graphics/vulkan/: vDevice.cpp  vDevice.hpp  vDevices.cpp  vDevices.hpp  vGraphicsPipeline.cpp  vGraphicsPipeline.hpp  vGraphicsPipeline.inl  vInstance.cpp  vInstance.hpp  vPhysicalDevices.cpp  vPhysicalDevices.hpp  vRenderPass.cpp  vRenderPass.hpp  vResource.cpp  vResource.hpp  vResource.inl  vSurface.cpp  vSurface.hpp  vSwapChain.cpp  vSwapChain.hpp  vSwapChain.inl
src/math/: Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  Vectors.hpp  math.cpp  math.hpp
src/types/: apiTypes.cpp  apiTypes.hpp  color.cpp  color.hpp  key.hpp  pos.hpp  size.hpp  size.inl
src/util/: coders.cpp  coders.hpp  console.cpp  console.hpp  time.cpp  time.hpp  types.cpp  types.hpp  vector.cpp  vector.hpp
src/window/: Cursor.cpp  Cursor.hpp  Event.cpp  Event.hpp  Monitor.cpp  Monitor.hpp  Window.cpp  Window.hpp
